@@ -5,6 +5,7 @@ NOCC 1.4    ?? ??, 200?
       (Arnaud Boudou).
 
   Patches
+    * Patch #1717436 : Show folder select only with more folders (Tim Gerundt).
     * Patch #1712388 : Prevent problems with base_url under windows (Tim
       Gerundt).
     * Patch #1706947 : Hide lang and theme select from login page (Tim Gerundt).
